--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,6 @@
     "target": "ES2021",
     "module": "CommonJS"
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./__test__/**/*"],
   "exclude": ["./node_modules"]
 }
