--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "type": "module",
   "scripts": {
     "format": "prettier ./**/*.{js,ts} --write",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@fnando/cpf": "^1.0.2",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "prettier": "3.3.2"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "husky": "^9.0.11"
   }
 }
