--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dose-em-casa-client",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "src/main.ts",
   "type": "module",
   "scripts": {
     "format": "prettier ./**/*.{js,ts} --write",
@@ -17,10 +17,20 @@
     "@fnando/cpf": "^1.0.2",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "prettier": "3.3.2"
+    "prettier": "3.3.2",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.5.2"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "husky": "^9.0.11"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": [
+        "ts-jest",
+        {}
+      ]
+    }
   }
 }
